[gd_scene load_steps=17 format=2]

[ext_resource path="res://FallingPlatform.gd" type="Script" id=1]
[ext_resource path="res://effects/platforms/moving_platform_single_0.png" type="Texture" id=2]
[ext_resource path="res://effects/platforms/moving_platform_single_4.png" type="Texture" id=3]
[ext_resource path="res://effects/platforms/moving_platform_single_2.png" type="Texture" id=4]
[ext_resource path="res://effects/platforms/moving_platform_single_1.png" type="Texture" id=5]
[ext_resource path="res://effects/platforms/moving_platform_single_3.png" type="Texture" id=6]
[ext_resource path="res://effects/platforms/falling_platform_crumble_0.png" type="Texture" id=7]
[ext_resource path="res://effects/platforms/falling_platform_crumble_1.png" type="Texture" id=8]
[ext_resource path="res://effects/platforms/falling_platform_crumble_2.png" type="Texture" id=9]
[ext_resource path="res://effects/platforms/falling_platform_crumble_5.png" type="Texture" id=10]
[ext_resource path="res://effects/platforms/falling_platform_crumble_6.png" type="Texture" id=11]
[ext_resource path="res://effects/platforms/falling_platform_crumble_3.png" type="Texture" id=12]
[ext_resource path="res://effects/platforms/falling_platform_crumble_4.png" type="Texture" id=13]
[ext_resource path="res://effects/platforms/falling_platform_crumble_7.png" type="Texture" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 14 ) ],
"loop": false,
"name": "Crumble",
"speed": 15.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 14 ) ],
"loop": false,
"name": "Respawn",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 3.7681 )

[node name="FallingPlatform" type="Node2D"]
script = ExtResource( 1 )

[node name="Platform" type="KinematicBody2D" parent="."]
collision_layer = 512
motion/sync_to_physics = true

[node name="Platform_Anim" type="AnimatedSprite" parent="Platform"]
frames = SubResource( 1 )
animation = "Respawn"
frame = 7
playing = true

[node name="Platform_Hitbox" type="CollisionShape2D" parent="Platform"]
position = Vector2( -0.122086, -2.31963 )
shape = SubResource( 2 )
one_way_collision = true

[node name="Raycasters" type="Node2D" parent="Platform"]

[node name="Ray1" type="RayCast2D" parent="Platform/Raycasters"]
enabled = true
cast_to = Vector2( 0, -8 )

[node name="Ray2" type="RayCast2D" parent="Platform/Raycasters"]
position = Vector2( -5.61595, -0.122086 )
enabled = true
cast_to = Vector2( 0, -8 )

[node name="Ray3" type="RayCast2D" parent="Platform/Raycasters"]
position = Vector2( 5.73803, 0 )
enabled = true
cast_to = Vector2( 0, -8 )

[node name="RespawnNotifier" type="VisibilityNotifier2D" parent="Platform"]
rect = Rect2( -8, -8, 16, 16 )

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="CrumbleTimer" type="Timer" parent="."]
wait_time = 0.35
one_shot = true
[connection signal="animation_finished" from="Platform/Platform_Anim" to="." method="_on_Platform_Anim_animation_finished"]
[connection signal="frame_changed" from="Platform/Platform_Anim" to="." method="_on_Platform_Anim_frame_changed"]
[connection signal="screen_exited" from="Platform/RespawnNotifier" to="." method="_on_RespawnNotifier_screen_exited"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
[connection signal="timeout" from="CrumbleTimer" to="." method="_on_CrumbleTimer_timeout"]
